# intikhab

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  ReadMe.md  deploy.sh  pyproject.toml  requirements.txt
.do/: app.yaml
app/: admin.py  apps.py  encryption.py  forms.py  models.py  models_old.py  signals.py  views.py  views_old.py
app/actions/: elections_actions.py
app/management/commands/: seed.py
app/migrations/: 0001_initial.py  0002_add_created_by_to_election.py  0002_alter_election_description_alter_election_public_key.py  0002_election_is_public_invitation.py  0002_election_public_key_vote_encrypted_vote.py  0003_election_private_key_alter_election_public_key.py  0003_invitation_is_one_time_link_invitation_used_by_and_more.py  0003_reorganize_models_structure.py  0004_election_closed_at_election_started_at.py  0004_remove_vote_encrypted_vote_and_more.py  0005_election_decrypted_tally_election_encrypted_tally.py  0005_election_decrypted_total_and_more.py  0005_vote_hashed.py  0006_alter_vote_ballot.py  0006_merge_20250127_0625.py  0007_vote_negative_ballot.py  0008_remove_election_decrypted_total.py  0008_remove_vote_negative_ballot_election_zero_randomness.py  0009_merge_20250204_1022.py  0010_election_decrypted_total.py
app/models/: __init__.py  candidate.py  election.py  invitation.py  party.py  profile.py  vote.py
app/signals/: election_signals.py
app/tests/: README.md  test_encryption.py  test_urls.py  test_views.py
app/views/: __init__.py  base.py  candidate.py  election.py  invitation.py  vote.py
project/: settings.py  urls.py
(+36 files in other folders)
