[project]
name = "intikhab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.7",
    "django>=5.2.6",
    "django-allauth>=65.11.2",
    "django-environ>=0.12.0",
    "lightphe>=0.0.15",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "sendgrid>=6.12.4",
]
